# model-inference-autoscaling-reinforcement-learning

./: .gitignore  README.md  lab.ipynb  main.py  pyproject.toml
rest-api/: Dockerfile  Makefile  README.md  compose.dev.yaml  pyproject.toml  seed_analyze.json
rest-api-i/: .dockerignore  .env  .gitignore  compose.dev.yaml  pyproject.toml  requirements.txt
rest-api-i/app/: config.py  db.py  main.py  middleware.py  schemas.py
rest-api-i/app/workloads/: io.py  memory.py
rest-api-i/deployment/: persistent.volume.claim.yaml  persistent.volume.yaml  postgres.statefulset.yaml  secret.yaml  service.monitor.app.yaml
rest-api-ii/: Dockerfile  compose.dev.yaml  go.mod  main.go
rest-api-ii/deployment/: app.deployment.yaml  app.hpa.yaml  ingress.rule.yaml  service.monitor.app.yaml
rest-api/app/: config.py  db.py  main.py  models.py  schemas.py  seed_analyze.py  seed_orders.py
rest-api/deployment/: app.deployment.yaml  app.hpa.yaml  ingress.rule.yaml  ingress.yaml  metrics.yaml  nginx.controller.yaml  persistent.volume.yaml  postgres.statefulset.yaml  secret.yaml  service.monitor.app.yaml
rest-api/load/: k6-5000vus.js  k6-cpu35vus-memory75vus.js  k6-cpu50vus-memory150vus.js  k6-each-100vus.js  k6-each-250vus.js  k6-each-25vus.js  k6-test-7000vus.js  k6-test-each-1000vus.js  k6-test-each-2000vus.js  k6-test-each-25vus.js  k6-test-each-30vus.js  k6-test-each-40vus.js  k6-test-each-5000vus.js  k6-test-each-500vus.js  k6-test-each-50vus.js  k6-test.js  k6.js  (+5 more)
video-inferencing/: .env  .gitignore  Makefile  README.md  app.py  compose.dev.yaml  mediamtx.yml  pyproject.toml
(+7 files in other folders)
